<resources>
    <string name="app_name">WeatherKit</string>

    <string name="google_api_key" translatable="true">AIzaSyBarP0K6BS71NJug-nHpUH4PH3tjJAlExs</string>
    <string name="google_web_api_key" translatable="true">AIzaSyChJXVIFrWS7llfvSVAxCOsFpcrDmPisuM</string>
    <string name="weather_api_key" translatable="true">e968d89ad34294bc47b5585a8c69330f</string>

    <string name="file_provider_authority" translatable="false">com.workfort.weatherkit.fileprovider</string>
    <string name="label_city">City</string>
    <string name="label_temp">00</string>
    <string name="label_degree">o</string>
    <string name="label_weather">Weather</string>
    <string name="label_wind_speed">Wind Speed</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_day_1">Monday</string>
    <string name="label_day_1_temp">5\" 1\"</string>
    <string name="ic_weather">Ic Weather</string>
    <string name="label_day_2">Tuesday</string>
    <string name="label_day_3">Wednesday</string>
    <string name="label_country">Country</string>
    <string name="open_gps_exception">Please turn your gps on first</string>
    <string name="service_not_available">Service not available. Please check your internet connection.</string>
    <string name="invalid_lat_long_used">Invalid coordinates</string>
    <string name="label_sunrise">Sun rise</string>
    <string name="description_city_image">City image</string>
    <string name="label_no_forecast">No Forecast</string>
</resources>
