<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_space">

        <TextView
                android:id="@+id/tv_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_day_3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_12"
                android:textAllCaps="true"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/ic_weather"/>

        <ImageView
                android:id="@+id/ic_weather"
                android:layout_width="@dimen/weather_ic_width"
                android:layout_height="@dimen/weather_ic_height"
                android:layout_marginTop="@dimen/space_10"
                app:srcCompat="@drawable/ic_rain"
                android:tint="@android:color/black"
                android:contentDescription="@string/ic_weather"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_temp"/>

        <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:text="@string/label_day_1_temp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_12"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_weather"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>